--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -76,6 +76,9 @@
   }
 
   /* Common typography */
+  h1 {
+    @apply text-3xl font-semibold my-5;
+  }
   h2 {
     @apply text-2xl font-semibold my-5;
   }
