--- a/web/themes/custom/giv_din_stemme_theme/templates/components/header.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/components/header.html.twig
@@ -1,15 +1,10 @@
-<header role="banner" class="bg-primary text-primary px-3 md:px-5 py-3 flex flex-row items-center gap-5 border-b border-secondary">
-
+<header role="banner" class="bg-white text-primary px-3 md:px-5 py-3 flex flex-row items-center gap-5">
+    <!--
   <div class="flex items-center place-items-start gap-5">
-
     {{ include(directory ~ '/templates/components/nav-button.html.twig') }}
-
   </div>
-
-  <div class="ml-auto gap-4 md:flex">
-
-    {{ page.header }}
-
+    -->
+  <div>
+    {{ page.breadcrumb }}
   </div>
-
 </header>
