--- a/web/themes/custom/giv_din_stemme_theme/templates/components/footer.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/components/footer.html.twig
@@ -1,4 +1,4 @@
-<footer role="contentinfo" class="container mx-auto border-t border-secondary py-8">
+<footer role="contentinfo" class="container mx-auto py-8">
   {{ page.footer_header }}
   <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 md:gap-20 divide-y md:divide-none">
     {{ page.footer_col_1 }}
