Added 2 basic pages

--- a/web/modules/custom/giv_din_stemme/templates/giv_din_stemme.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/giv_din_stemme.html.twig
@@ -1,22 +1,7 @@
-{#
-User menu template
-  - Available variables:
-    - test_variable: A test vaiable.
-#}
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Web dictaphone</title>
-  <link href="styles/app.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-
 <div class="wrapper">
 
   <header>
-    <h1>{{ test_variable }}</h1>
+    <h1>{{ test_variable }}1</h1>
   </header>
 
   <section class="main-controls">
@@ -33,6 +18,3 @@ User menu template
   </section>
 
 </div>
-
-</body>
-</html>
