--- a/web/themes/custom/giv_din_stemme_theme/templates/components/breadcrumb.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/components/breadcrumb.html.twig
@@ -1,12 +1,17 @@
 {% if breadcrumb %}
+
   <div class="container mx-auto px-3 text-secondary my-3">
     <nav role="navigation" aria-labelledby="system-breadcrumb">
       <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
       <ol class="flex gap-1">
       {% for item in breadcrumb %}
         <li>
-          {% if item.url %}
-              <a class="mr-3" href="{{ item.url }}">{{ item.text }}</a>
+          {% if item.url is same as '/' %}
+            <a class="mr-3" href="{{ item.url }}">{{ drupal_config('system.site', 'name') }}</a>
+          {% else %}
+            {% if item.url %}
+              <span class="mr-3" >/</span><a class="mr-3" href="{{ item.url }}">{{ item.text }}</a>
+            {% endif %}
           {% endif %}
         </li>
       {% endfor %}
