--- a/web/themes/custom/giv_din_stemme_theme/templates/page.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/page.html.twig
@@ -47,8 +47,8 @@
 #}
 {{ include(directory ~ '/templates/components/header.html.twig') }}
 <div class="bg-white max-w-2xl mx-auto">
-  <main role="main" class="">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+  <main role="main" class="mb-5">
+    <a id="main-content" tabindex="-1"></a>
     {{ page.content }}
   </main>
   <!--{{ include(directory ~ '/templates/components/footer.html.twig') }} -->
