--- a/web/themes/custom/giv_din_stemme_theme/templates/input--submit--icon.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/input--submit--icon.html.twig
@@ -14,8 +14,11 @@
 #}
 {%
   set classes = [
-    'btn-primary px-5 cursor-pointer'
+    'btn-default'
   ]
 %}
 
-<input{{ attributes.addClass(classes) }} />{{ children }}
+<button{{ attributes.addClass(classes) }}>
+  <span class="mr-3">{{ attributes.value }}</span>
+  <i class="{{ attributes.offsetGet('fa-icon').__toString() }}"></i>
+</button>
