--- a/web/modules/custom/giv_din_stemme/templates/consent_page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/consent_page.html.twig
@@ -1,27 +1,34 @@
-<div class="wrapper">
-  <section class="main">
-    <h1>Samtykke</h1>
-
-    <div>
-      <div>
-        <p>
-          For at vi kan modtage din donation, skal du give os ret til at opbevare og behandle lydfilen med din stemme. Dette sker ved at du giver os samtykke med MitID nedenfor.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce imperdiet lorem vitae purus fermentum rutrum. Nam tempus vel dolor sit amet ullamcorper. Suspendisse maximus neque accumsan nunc aliquam, et tempus enim pellentesque. Donec tincidunt lectus leo, nec aliquam erat ornare quis. Nullam at dignissim tortor, nec tristique urna. Donec viverra pulvinar felis eu tincidunt. Maecenas aliquam vulputate nibh at aliquet. Ut quis augue nulla. Aliquam elementum ipsum eget pulvinar faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam venenatis gravida lacus eu convallis. Sed laoreet congue eros, ac iaculis ante. Sed feugiat eget magna et tincidunt.
-        </p>
-      </div>
-      <div>
-        <p>
-          Læs vores betingelser
-        </p>
-        <form action="/mitid">
-          <input type="checkbox" id="consent_checkbox" name="consent" value="Ja, jeg giver mit samtykke">
-          <button type="submit">Doner</button>
-        </form>
-      </div>
+{% extends "@giv_din_stemme/gds-page-wrapper.html.twig" %}
+{% block gds_content %}
+  <div class="py-5">
+    <div class="consent-intro text-lg">
+      <p>
+        {{ 'To receive your donation, you must allow us to keep and process the sound file with your voice. This happens by you giving consent with MitID below.'|t }}
+      </p>
     </div>
-
-  </section>
-</div>
-
+    <div class="mb-5 pb-5 border-b-2"></div>
+    <div class="consent-text max-h-52 overflow-y-scroll">
+      <p>
+        {% include "@giv_din_stemme/texts/consent-text.html" %}
+      </p>
+    </div>
+  </div>
+{% endblock %}
+{% block gds_footer %}
+  <div class="py-5">
+    <form action="/profile">
+      <div class="grid grid-cols-2">
+        <div class="sm:col-span-1">
+          <input class="mr-3" type="checkbox" id="consent_checkbox" name="consent" value="consent_given" required>
+          <label for="consent_checkbox">{{ 'Yes, I consent'|t }}</label>
+        </div>
+        <div class="sm:col-span-1 justify-self-end">
+          <button type="submit" class="btn-default">
+            <span class="mr-3">{{ 'Consent with MitID'|t }}</span>
+            <i class="fa-solid fa-circle-arrow-right"></i>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+{% endblock %}
