--- a/web/modules/custom/giv_din_stemme/templates/giv_din_stemme.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/giv_din_stemme.html.twig
@@ -1,20 +1,14 @@
-<div class="wrapper">
-
-  <header>
-    <h1>{{ test_variable }}1</h1>
-  </header>
-
-  <section class="main-controls">
+{% extends "@giv_din_stemme/gds-page-wrapper.html.twig" %}
+{% block gds_content %}
+  <div class="py-5">
     <canvas class="visualizer" height="60px"></canvas>
     <div id="buttons">
       <button class="record">Record</button>
       <button class="stop">Stop</button>
     </div>
-  </section>
+  </div>
 
   <section class="sound-clips">
 
-
   </section>
-
-</div>
+{% endblock %}
