--- a/web/modules/custom/giv_din_stemme/templates/landing_page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/landing_page.html.twig
@@ -1,27 +1,21 @@
-<div class="wrapper">
-
-  <section class="main">
-    <h1>Doner din stemme</h1>
-
+{% extends "@giv_din_stemme/gds-page-wrapper.html.twig" %}
+{% block gds_content %}
+  <div class="py-5">
     <div>
-      <div>
-        <p>
-          Optagelse af stemmer er en nødvendighed for at kunne træne vores danske sprogmodel
-        </p>
-        <p>
-          <b>101</b> personer har tilsammen donereret <b>713</b> minutter
-        </p>
-      </div>
-      <div>
-        <p>
-          Læs vores betingelser
-        </p>
-        <form action="/consent">
-          <button type="submit">Doner</button>
-        </form>
-      </div>
+      <p>
+        Optagelse af stemmer er en nødvendighed for at kunne træne vores danske sprogmodel
+      </p>
+      <p>
+        <b>101</b> personer har tilsammen donereret <b>713</b> minutter
+      </p>
     </div>
-
-  </section>
-
-</div>
+    <div>
+      <p>
+        Læs vores betingelser
+      </p>
+      <form action="/consent">
+        <button type="submit">Doner</button>
+      </form>
+    </div>
+  </div>
+{% endblock %}
