--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -105,6 +105,10 @@
     @apply text-secondary text-sm;
   }
 
+  .pager-item.active {
+      @apply text-brand border-brand border-b;
+  }
+
 }
 
 /* Fixed position for chat window*/
