--- a/web/themes/custom/giv_din_stemme_theme/templates/form.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/form.html.twig
@@ -12,6 +12,6 @@
  * @ingroup themeable
  */
 #}
-<form{{ attributes.addClass('bg-white', 'drop-shadow-md') }}>
+<form{{ attributes.addClass('bg-white pt-10') }}>
   {{ children }}
 </form>
