--- a/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
@@ -1,7 +1,7 @@
 {% extends "@giv_din_stemme/gds-page-wrapper.html.twig" %}
+
 {% block gds_pager %}
-  {% set active_page = 1 %}
-  {{ dump(active_page) }}
+  {% include "@giv_din_stemme/user-setup-pager.html.twig" with {'active_page': 1} %}
 {% endblock %}
 
 {% block gds_content %}
