Removed dark theme

--- a/web/modules/custom/giv_din_stemme/templates/test-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/test-page.html.twig
@@ -10,9 +10,10 @@
   </div>
 {% endblock %}
 {% block gds_footer %}
-  <div class="py-5">
+  <div class="py-5 justify-self-end">
     <a href="{{ url('giv_din_stemme.donate') }}" class="btn-default button button--primary">
       <span class="mr-3">{{ 'Continue'|t }}</span>
+      <i class="fa-solid fa-circle-arrow-right"></i>
     </a>
   </div>
 {% endblock %}
