--- a/web/modules/custom/giv_din_stemme/templates/user-setup-pager.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/user-setup-pager.html.twig
@@ -29,7 +29,7 @@
       <span class="pr-2">{{ key }}.</span>
       <span>{{ element.title }}</span>
       {% if key < active_page %}
-        <span><i class="text-green-600 fa-solid fa-circle-check"></i></span>
+        <span><i class="text-green-600 fa-regular fa-circle-check"></i></span>
       {% endif %}
     </div>
   {% endfor %}
