--- a/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
@@ -10,7 +10,7 @@
   </div>
 {% endblock %}
 {% block gds_footer %}
-  <div class="py-5 justify-self-end">
+  <div class="py-5 grid justify-end">
     <a href="{{ url('giv_din_stemme.test') }}" class="btn-default button button--primary">
       <span class="mr-3">{{ 'Continue'|t }}</span>
       <i class="fa-solid fa-circle-arrow-right"></i>
