--- a/web/modules/custom/giv_din_stemme/templates/user-setup-pager.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/user-setup-pager.html.twig
@@ -22,15 +22,17 @@
 }
 %}
 
-<div class="mb-10 mx-5 flex space-x-8 text-xl">
+<div class="mb-10 mx-5 flex md:space-x-8 text-xl flex-wrap md:flex-nowrap">
   {% for key, element in pager %}
     {% set classes = key is same as active_page ? element.classes ~ ' ' ~ 'active' : element.classes %}
-    <div class="{{ classes }}">
-      <span class="pr-2">{{ key }}.</span>
-      <span>{{ element.title }}</span>
-      {% if key < active_page %}
-        <span><i class="text-green-600 fa-regular fa-circle-check"></i></span>
-      {% endif %}
+    <div class="basis-full md:basis-auto {{ classes }}">
+      <div class="inline-block">
+        <span class="pr-2">{{ key }}.</span>
+        <span>{{ element.title }}</span>
+        {% if key < active_page %}
+          <span><i class="text-green-600 fa-regular fa-circle-check"></i></span>
+        {% endif %}
+      </div>
     </div>
   {% endfor %}
 </div>
