--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -106,7 +106,11 @@
   }
 
   .pager-item.active {
-      @apply text-brand border-brand border-b;
+      @apply text-brand;
+  }
+
+  .pager-item.active > div {
+      @apply border-brand border-b;
   }
 
 }
