--- a/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
@@ -21,7 +21,7 @@
 {% endblock %}
 {% block gds_footer %}
   <div class="py-5">
-    <form action="/profile">
+    <form action="/oidc-login">
       <div class="grid grid-cols-2">
         <div class="sm:col-span-1">
           <input class="mr-3" type="checkbox" id="consent_checkbox" name="consent" value="consent_given" required>
