Added use page and form

--- a/web/themes/custom/giv_din_stemme_theme/templates/form-element-label.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/form-element-label.html.twig
@@ -20,7 +20,7 @@
     title_display == 'invisible' ? 'visually-hidden',
     required ? 'js-form-required',
     required ? 'form-required',
-    'font-semibold block',
+    'block',
   ]
 %}
 {% if title is not empty or required -%}
