--- a/web/modules/custom/giv_din_stemme/templates/giv-din-stemme-profile-form.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/giv-din-stemme-profile-form.html.twig
@@ -5,9 +5,8 @@
 {% endblock %}
 
 {% block gds_content %}
-  {{ form.actions }}
-  {# Renders the rest of the form #}
-  {{ form }}
+  {% set userForm = drupal_entity_form('user', user.id()) %}
+  {{ userForm }}
 {% endblock %}
 
 
