--- a/web/modules/custom/giv_din_stemme/templates/landing-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/landing-page.html.twig
@@ -1,3 +1,7 @@
+{%
+set redirect = user.isAuthenticated() ? 'giv_din_stemme.profile' : 'giv_din_stemme.consent'
+%}
+
 <h1 class="px-5 mt-10 text-5xl">{{ drupal_title() }}</h1>
 <section class="content">
   <main class="main px-5">
@@ -6,20 +10,18 @@
         <div>{{ 'Voice recording is necessary to train our danish language model.' }}
         </div>
         <div class="mt-5">
-          <a href="#" class="text-black">{{ 'Read our terms'|t }}</a>
+          <span modal-id="terms-modal" class="cursor-pointer btnOpenModal text-black">{{ 'Read our terms'|t }}</span>
         </div>
       </div>
       <div class="col-span-1">
         <p>
-          <span class="text-black font-medium">
-            <i class="mr-3 fa-regular fa-user"></i>X
-          </span> {{ 'people have donated'|t }}
-          <span class="text-black font-medium">
-            <i class="mr-3 fa-regular fa-clock"></i>X
-          </span> {{ 'minutes'|t }}
+          <span class="text-black font-medium"><i class="mr-3 fa-regular fa-user"></i>X</span> {{ 'Donations'|t }}
+        </p>
+        <p>
+          <span class="text-black font-medium"><i class="mr-3 fa-regular fa-clock"></i>X</span> {{ 'Minutes'|t }}
         </p>
         <div class="my-10">
-          <a href="{{ url('giv_din_stemme.consent') }}" class="btn-primary button">
+          <a href="{{ url(redirect) }}" class="btn-primary button">
             <i class="mr-3 fa-solid fa-microphone"></i>
             <span>{{ 'Start donation'|t }}</span>
           </a>
@@ -28,4 +30,6 @@
     </div>
   </main>
 </section>
+
+{% include '@giv_din_stemme_theme/templates/modal-terms.html.twig' %}
 
