Added voice permission

--- a/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block gds_content %}
+  {{ attach_library('giv_din_stemme/check_microphone') }}
   <div class="py-5">
     Lorem
   </div>
