Updated code after review

--- a/web/modules/custom/giv_din_stemme/templates/giv-din-stemme-profile-form.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/giv-din-stemme-profile-form.html.twig
@@ -5,8 +5,7 @@
 {% endblock %}
 
 {% block gds_content %}
-  {% set userForm = drupal_entity_form('user', user.id()) %}
-  {{ userForm }}
+  {{ drupal_entity_form('user', user.id()) }}
 {% endblock %}
 
 
