--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -115,34 +115,7 @@
 
 }
 
-/* Fixed position for chat window*/
-.fixed {
-  position: fixed;
+#volume-test-toggle {
+    background-color: red;
+    box-shadow: 0 0 var(--volume, 0) var(--volume, 0) red;
 }
-
-/* Text with color gradient */
-.text-brand-gradient {
-  color: #6B21A8;
-  background-image:
-  -webkit-linear-gradient(0deg, #6B21A8 27%, #1D4ED8 58%, #0F766E 85%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  text-fill-color: transparent;
-  -webkit-text-fill-color: transparent;
-}
-
-/* Button with color gradient */
-.bg-brand-gradient {
-  border-radius: 4px;
-  background: conic-gradient(from 155deg at 40.34% 96.67%, rgba(0, 0, 0, 0.00) 230.58232069015503deg, rgba(0, 0, 0, 0.55) 230.62508583068848deg), linear-gradient(91deg, #6B21A8 26.88%, #1D4ED8 57.74%, #0F766E 84.12%);
-}
-
-/*
-** To have chat aligned to bottom we do this since ´justify-content: flex-end;` breaks scrolling
-** https://stackoverflow.com/questions/36130760/use-justify-content-flex-end-and-to-have-vertical-scrollbar
-*/
-.chat-window main > :first-child {
-  margin-top: auto !important;
-  /* use !important to prevent breakage from child margin settings */
-}
-
