--- a/web/themes/custom/giv_din_stemme_theme/templates/page--user--%.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/page--user--%.html.twig
@@ -51,6 +51,6 @@
     <a id="main-content" tabindex="-1"></a>
     {{ page.content }}
   </main>
-  <!--{{ include(directory ~ '/templates/components/footer.html.twig') }} -->
+  {# {{ include(directory ~ '/templates/components/footer.html.twig') }} #}
 </div>{# /.layout-container #}
 {{ include(directory ~ '/templates/components/global-navigation.html.twig') }}
