--- a/web/themes/custom/giv_din_stemme_theme/templates/page--user.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/page--user.html.twig
@@ -55,6 +55,6 @@
         </div>
     </main>
   </section>
-  <!--{{ include(directory ~ '/templates/components/footer.html.twig') }} -->
+  {# {{ include(directory ~ '/templates/components/footer.html.twig') }} #}
 </div>{# /.layout-container #}
 {{ include(directory ~ '/templates/components/global-navigation.html.twig') }}
