--- a/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
@@ -5,14 +5,32 @@
 {% endblock %}
 
 {% block gds_content %}
-  {{ attach_library('giv_din_stemme/check_microphone') }}
   <div class="py-5">
-    Lorem
+    <div class="consent-intro text-lg">
+      <p>
+        {{ 'To record the sound you must grant us access to use the microphone on your device. Press the microphone icon next to the address bar, and click Allow in the popup that appears in your browser.'|t }}
+      </p>
+      <p>
+          {{ 'If you encounter a problem see <span class="underline cursor-pointer btnOpenModal">Help for permissions</span>'|t }}
+      </p>
+    </div>
+    <div class="-mx-5 mb-5 pb-5 border-b-2"></div>
+    <div id="microphone-allowed-display" class="hidden shadow-mic-button bg-orange-600 my-16 mx-auto rounded-full w-20 h-20 text-center">
+      <div class="align-middle table-cell">
+        <i class="text-white text-3xl fa-solid fa-microphone"></i>
+      </div>
+    </div>
+    <div id="microphone-disallowed-display" class="bg-gray-400 my-16 mx-auto rounded-full table w-20 h-20 cursor-pointer text-center">
+      <div class="align-middle table-cell">
+        <i class="text-white text-3xl fa-solid fa-microphone-slash"></i>
+      </div>
+    </div>
+    <div id="microphone-help-text" class="duration-1000 text-center text-lg ">{{ 'Lorem.'|t }}</div>
   </div>
 {% endblock %}
 {% block gds_footer %}
-  <div class="py-5 grid justify-end">
-    <a href="{{ url('giv_din_stemme.test') }}" class="btn-default button button--primary">
+  <div id="continue-button" class="py-5 grid justify-end">
+    <a href="{{ url('giv_din_stemme.test') }}" class="pointer-events-none btn-disabled button button--primary">
       <span class="mr-3">{{ 'Continue'|t }}</span>
       <i class="fa-solid fa-circle-arrow-right"></i>
     </a>
