--- a/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
@@ -1,17 +1,20 @@
 {% extends "@giv_din_stemme/gds-page-wrapper.html.twig" %}
+{% set modal_id = 'permissions-modal' %}
 
 {% block gds_pager %}
+  {% include '@giv_din_stemme_theme/templates/modal.html.twig' with {'text_template': '@giv_din_stemme_theme/texts/permission-text.html', 'modal_id': modal_id } %}
   {% include "@giv_din_stemme/user-setup-pager.html.twig" with {'active_page': 3} %}
 {% endblock %}
 
 {% block gds_content %}
+  {{ attach_library('giv_din_stemme/check_microphone') }}
   <div class="py-5">
     <div class="consent-intro text-lg">
       <p>
         {{ 'To record the sound you must grant us access to use the microphone on your device. Press the microphone icon next to the address bar, and click Allow in the popup that appears in your browser.'|t }}
       </p>
       <p>
-          {{ 'If you encounter a problem see <span class="underline cursor-pointer btnOpenModal">Help for permissions</span>'|t }}
+          {{ 'If you encounter a problem see: ' }} <span modal-id="{{ modal_id }}" class="underline cursor-pointer btnOpenModal">{{ 'Help for permissions'|t }}</span>.
       </p>
     </div>
     <div class="-mx-5 mb-5 pb-5 border-b-2"></div>
@@ -25,7 +28,7 @@
         <i class="text-white text-3xl fa-solid fa-microphone-slash"></i>
       </div>
     </div>
-    <div id="microphone-help-text" class="duration-1000 text-center text-lg ">{{ 'Lorem.'|t }}</div>
+    <div id="microphone-help-text" class="duration-1000 text-center text-lg">{{ 'There is no microphone access.'|t }}</div>
   </div>
 {% endblock %}
 {% block gds_footer %}
