--- a/web/themes/custom/giv_din_stemme_theme/templates/modal.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/modal.html.twig
@@ -1,4 +1,4 @@
-<div id="terms-modal" class="fixed z-50 inset-0 overflow-y-auto hidden">
+<div id="{{ modal_id }}" class="fixed z-50 inset-0 overflow-y-auto hidden">
   <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
     <div class="fixed inset-0 transition-opacity" aria-hidden="true">
       <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
@@ -7,7 +7,7 @@
     <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6"
          role="dialog" aria-modal="true" aria-labelledby="modal-headline">
       <div class="block absolute top-0 right-0 pt-4 pr-4">
-        <button modal-id="terms-modal" type="button" data-behavior="cancel" class="btnCloseModal bg-white rounded-md text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+        <button modal-id="{{ modal_id }}" type="button" data-behavior="cancel" class="btnCloseModal bg-white rounded-md text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
           <span class="sr-only">Close</span>
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -16,7 +16,7 @@
       </div>
       <div class="sm:flex sm:items-start">
         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-          {% include '@giv_din_stemme_theme/texts/terms-text.html' %}
+          {% include text_template %}
         </div>
       </div>
     </div>
