--- a/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
@@ -2,8 +2,8 @@
   {% include "@giv_din_stemme/user-setup-pager.html.twig" %}
 {% endblock %}
 
-<h1 class="px-5">{{ drupal_title() }}</h1>
-<section class="content drop-shadow-md">
+<section class="content drop-shadow-md m-3 md:m-0">
+  <h1 class="px-5">{{ drupal_title() }}</h1>
   <main class="main bg-white px-5">
     {% block gds_content %}
     {% endblock %}
