--- a/web/modules/custom/giv_din_stemme/templates/donate-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/donate-page.html.twig
@@ -6,12 +6,13 @@
 
 {% block gds_content %}
   <div class="py-5">
-    Lorem
+    {% include '@giv_din_stemme_theme/texts/ready-to-donate-text.html' %}
+    <a class="underline" href="{{ url('user.page') }}">{{ 'View your profile'|t }}</a>
   </div>
 {% endblock %}
 {% block gds_footer %}
   <div class="py-5 grid justify-end">
-    <a href="#" class="btn-default button button--primary">
+    <a href="{{ url('giv_din_stemme.show') }}" class="btn-default button button--primary">
       <span class="mr-3">{{ 'Continue'|t }}</span>
       <i class="fa-solid fa-circle-arrow-right"></i>
     </a>
