Added functionality for frontpage variables

--- a/web/modules/custom/giv_din_stemme/templates/landing-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/landing-page.html.twig
@@ -17,10 +17,10 @@
       </div>
       <div class="col-span-1">
         <p>
-          <span class="text-black font-medium"><i class="mr-3 fa-regular fa-user"></i>X</span> {{ 'Donations'|t }}
+          <span class="text-black font-medium"><i class="mr-3 fa-regular fa-user"></i>{{ values.donations }}</span> {{ 'Donations'|t }}
         </p>
         <p>
-          <span class="text-black font-medium"><i class="mr-3 fa-regular fa-clock"></i>X</span> {{ 'Minutes'|t }}
+          <span class="text-black font-medium"><i class="mr-3 fa-regular fa-clock"></i>{{ values.minutes }}</span> {{ 'Minutes'|t }}
         </p>
         <div class="my-10">
           <a href="{{ redirect_url }}" class="btn-primary button">
