--- a/web/themes/custom/giv_din_stemme_theme/templates/modal.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/modal.html.twig
@@ -16,7 +16,7 @@
       </div>
       <div class="sm:flex sm:items-start">
         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-          {% include text_template %}
+          {{ include(text_template) }}
         </div>
       </div>
     </div>
