--- a/web/modules/custom/giv_din_stemme/templates/thank-you-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/thank-you-page.html.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 {% block gds_footer %}
   <div class="py-5">
-    <form action="/read">
+    <form action="/start-donating">
       <div class="grid grid-cols-2">
         <div class="sm:col-span-1">
         </div>
@@ -32,14 +32,3 @@
   </div>
 {% endblock %}
 
-
-{#<h1 class="px-5">{{ drupal_title() }}</h1>#}
-{#<section class="content drop-shadow-md">#}
-{#  <main class="main bg-white px-5">#}
-{#    {% block gds_content %}#}
-{#    {% endblock %}#}
-{#  </main>#}
-{#  <footer class="footer bg-gray-100 px-5">#}
-{#    {% block gds_footer %}{% endblock %}#}
-{#  </footer>#}
-{#</section>#}
