--- a/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block gds_content %}
-  <div class="py-5">
+  <div>
     <div class="consent-intro text-lg">
       <p>
         {{ 'To receive your donation, you must allow us to keep and process the sound file with your voice. This happens by you giving consent with MitID below.'|t }}
