--- a/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
@@ -3,12 +3,12 @@
 {% endblock %}
 
 <section class="content drop-shadow-md m-3 md:m-0">
-  <h1 class="px-5">{{ drupal_title() }}</h1>
-  <main class="main bg-white px-5">
+  <main class="main bg-white px-5 rounded-t py-3">
+    <h1>{{ drupal_title() }}</h1>
     {% block gds_content %}
     {% endblock %}
   </main>
-  <footer class="footer bg-gray-100 px-5">
+  <footer class="footer bg-gray-100 px-5 rounded-b">
     {% block gds_footer %}{% endblock %}
   </footer>
 </section>
