--- a/web/modules/custom/giv_din_stemme/templates/donate-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/donate-page.html.twig
@@ -12,7 +12,7 @@
 {% endblock %}
 {% block gds_footer %}
   <div class="py-5 grid justify-end">
-    <a href="{{ url('giv_din_stemme.show') }}" class="btn-default button button--primary">
+    <a href="{{ url('giv_din_stemme.start_donating') }}" class="btn-default button button--primary">
       <span class="mr-3">{{ 'Continue'|t }}</span>
       <i class="fa-solid fa-circle-arrow-right"></i>
     </a>
