--- a/web/modules/custom/giv_din_stemme/templates/thank-you-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/thank-you-page.html.twig
@@ -2,17 +2,7 @@
 
 {% block gds_content %}
   <div class="py-5">
-    <div class="consent-intro text-lg">
-      <p>
-        {{ "Thank you for the recording"|t }}
-      </p>
-    </div>
-    <div class="mb-5 pb-5 border-b-2"></div>
-    <div class="consent-text max-h-52 overflow-y-scroll">
-      <p>
-        Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum. Lorem ipsum.
-      </p>
-    </div>
+    {% include '@giv_din_stemme_theme/texts/thank-you-for-the-donation-text.html' %}
   </div>
 {% endblock %}
 {% block gds_footer %}
