--- a/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
@@ -29,6 +29,7 @@
   <div class="py-5">
     <form action="{{ nextUrl }}" method="post" enctype="multipart/form-data">
       <input type="file" name="file" id="audio_input" hidden>
+      <input type="number" id="recording_duration" name="duration" hidden>
       <div class="grid grid-cols-2">
         <div class="sm:col-span-1">
         </div>
