--- a/web/themes/custom/giv_din_stemme_theme/templates/html.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/html.html.twig
@@ -48,7 +48,7 @@
       {{ page_bottom }}
     </div>
     <img class="-z-50 fixed object-cover object-center min-h-80 w-full bottom-0" src="/{{ directory }}/background.svg"/>
-    <img class="-z-45 p-3 md:m-0 md:fixed md:left-5 md:bottom-5" src="/{{ directory }}/logo.png"/>
+    <img class="-z-45 p-3 md:m-0 md:fixed md:left-5 md:bottom-5" src="/{{ directory }}/doner-din-stemme-logo.svg"/>
     <js-bottom-placeholder token="{{ placeholder_token }}">
   </body>
 </html>
