--- a/web/modules/custom/giv_din_stemme/templates/user-setup-pager.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/user-setup-pager.html.twig
@@ -32,7 +32,7 @@
         {% else %}
           <span><i class="text-black fa-regular fa-circle-dot"></i></span>
         {% endif %}
-        <span class="label">{{ element.title }}</span>
+        <span class="label ml-1">{{ element.title }}</span>
       </div>
     </div>
   {% endfor %}
